<?xml version="1.0" encoding="utf-8"?>

<!--
    Nombre del proyecto: Mboriaju
    Autores: Leonardo Duarte, Lucas Baruja, Ezequiel Arce, Ivan Samudio
    Descripción: Este archivo define el layout de la pantalla "Acerca de...", mostrando información sobre la versión del software,
                 los desarrolladores y la fecha de lanzamiento. También incluye un botón para volver a la pantalla anterior.
    Fecha de creación: 23/10/2024
    Forma de utilizar: Este layout se infla en la actividad o fragmento "Acerca de..." y presenta datos informativos sobre la aplicación.
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_about"
        android:textStyle="bold"
        android:textSize="24sp"
        android:gravity="center"
        android:layout_marginBottom="16dp" />

    <TextView
        android:id="@+id/version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/version_software"
        android:textSize="18sp"
        android:layout_marginBottom="8dp" />

    <TextView
        android:id="@+id/developer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/developer_name"
        android:textSize="18sp"
        android:layout_marginBottom="8dp" />

    <TextView
        android:id="@+id/release_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/release_date"
        android:textSize="18sp" />

    <Button
        android:id="@+id/buttonBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_back_button"
        android:layout_gravity="center"
        android:textColor="#FFFFFF"
        android:backgroundTint="#FF0000"
        android:layout_marginTop="24dp"/>

</LinearLayout>
